RESOLVED FIXED228007
FetchResponse.formData() should reject promise with a TypeError if the body is null
https://bugs.webkit.org/show_bug.cgi?id=228007
Summary FetchResponse.formData() should reject promise with a TypeError if the body i...
Chris Dumez
Reported 2021-07-15 15:24:10 PDT
FetchResponse.formData() should reject promise with a TypeError if the body is null.
Attachments
Patch (9.09 KB, patch)
2021-07-15 15:25 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-07-15 15:25:40 PDT
EWS
Comment 2 2021-07-15 16:25:00 PDT
Committed r279969 (239712@main): <https://commits.webkit.org/239712@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433627 [details].
Radar WebKit Bug Importer
Comment 3 2021-07-15 16:25:18 PDT
Note You need to log in before you can comment on or make changes to this bug.