FetchResponse.formData() should reject promise with a TypeError if the body is null https://bugs.webkit.org/show_bug.cgi?id=228007

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

Rebaseline WPT tests now that more checks are passing.

* web-platform-tests/fetch/api/request/request-consume-empty.any-expected.txt:
* web-platform-tests/fetch/api/request/request-consume-empty.any.worker-expected.txt:
* web-platform-tests/fetch/api/response/response-consume-empty.any-expected.txt:
* web-platform-tests/fetch/api/response/response-consume-empty.any.worker-expected.txt:

Source/WebCore:

FetchResponse.formData() should reject promise with a TypeError if the body is null, to match
the behavior of Chrome and Firefox.

No new tests, rebaselined existing tests.

* Modules/fetch/FetchBodyOwner.cpp:
(WebCore::FetchBodyOwner::formData):


Canonical link: https://commits.webkit.org/239712@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279969 268f45cc-cd09-0410-ab3c-d52691b4dbfc